# StudioCommand

./: .gitignore  README.md  VERSION
.github/workflows/: build.yml
engine/: Cargo.toml  stub_index.html
engine/src/: main.rs
packaging/: README-packaging.md  install-online.sh  install.sh  nginx-studiocommand.conf  studiocommand.service
web/: README.md  admin.html  app.js  index.html  remote.html  styles.css
web/shared/: base.css  base.js
