[package]
name = "studiocommand-engine"
version = "0.1.62"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.33"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fastrand = "2"

# --- WebRTC Listen Live (v0.1.54) ---
# webrtc provides a pure-Rust WebRTC stack.
# We use it to create a low-latency "Listen Live" monitor in the browser.
webrtc = "0.14.0"

# Opus encoder (libopus bindings). Most Linux distros (and GitHub Actions runners)
# provide libopus; if your build environment does not, install libopus-dev.
opus = "0.3.0"
bytes = "1"
base64 = "0.22"
